--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,13 @@
         "rootDir": "src",
         "outDir": "dist",
         "strict": true,
-        "types": ["@jessebrault0709/cc-types", "@jessebrault0709/computronics-types", "@jessebrault0709/cube"]
+        "types": [
+            "lua-types/5.2",
+            "@jessebrault0709/cc-types",
+            "@jessebrault0709/computronics-types",
+            "@jessebrault0709/cube",
+            "busted-tstl"
+        ]
     },
     "tstl": {
         "buildMode": "library",
